Update ai and meal app pages, styling

--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -1,5 +1,5 @@
 <h2 class='relative mb-20 text-2xl font-bold'>
   <span
-    class='block absolute top-14 w-32 h-1 bg-gradient-to-br from-[#70cdf5] to-[#6073f7]'
+    class='block absolute -bottom-8 w-32 h-1 bg-gradient-to-br from-[#70cdf5] to-[#6073f7]'
   ></span><slot />
 </h2>
