--- a/src/components/Project.astro
+++ b/src/components/Project.astro
@@ -12,27 +12,33 @@ const { title, description, image, url } = Astro.props
 ---
 
 <!-- Picture sizes, widths, ratio, all placeholders for now -->
-<div class='mb-24 last:mb-0 p-8 sm:p-8 rounded-2xl bg-[#3b4551] shadow-2xl'>
-  <a href={url} class='flex flex-wrap group'>
-    <div class='sm:basis-3/5 pr-16 flex flex-col'>
-      <h3 class='mb-8 text-xl font-semibold'>{title}</h3>
-      <p>
-        {description}
-      </p>
+<div class='mb-24 last:mb-0 bg-[#31373f] shadow-2xl'>
+  <a href={url} class='relative group'>
+    <div class='p-8 pb-12 md:pb-0 flex flex-wrap'>
+      <div class='md:basis-3/5 md:pr-10 lg:pr-20 pb-8'>
+        <h3 class='mb-8 text-xl font-semibold'>{title}</h3>
+        <p>
+          {description}
+        </p>
+      </div>
+      <div class='md:basis-2/5'>
+        <Picture
+          src={image}
+          widths={[600]}
+          alt='nemesis-ai-screenshot'
+          aspectRatio='3:2'
+          sizes='(max-width: 800px) 100vw, 800px'
+          class='rounded-lg shadow-xl'
+        />
+      </div>
+    </div>
+    <div>
       <button
-        class='mt-auto mr-4 py-4 px-10 w-48 text-xs font-bold uppercase rounded-full bg-slate-500 shadow-lg'
-        >View Project &rsaquo;</button
+        class='w-48 ml-8 py-4 px-6 text-xs font-bold uppercase bg-[#308591]'
       >
+        View Project &rsaquo;
+      </button>
     </div>
-    <div class='sm:basis-2/5'>
-      <Picture
-        src={image}
-        widths={[600]}
-        alt='nemesis-ai-screenshot'
-        aspectRatio='3:2'
-        sizes='(max-width: 800px) 100vw, 800px'
-        class='rounded-lg shadow-xl'
-      />
-    </div>
+    <span class='absolute left-0 bottom-0 w-full h-1 bg-[#308591]'></span>
   </a>
 </div>
