--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props
   </head>
   <body class='bg-background text-text leading-8'>
     <div
-      class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)]'
+      class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)] sm:grid-cols-[minmax(64px,_1fr)_minmax(auto,_1024px)_minmax(64px,_1fr)]'
     >
       <slot />
     </div>
