--- a/src/layouts/ProjectLayout.astro
+++ b/src/layouts/ProjectLayout.astro
@@ -24,9 +24,9 @@ const { title } = Astro.props
 
   <body class='bg-background text-text leading-8'>
     <div
-      class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)]'
+      class='grid grid-cols-[minmax(16px,_1fr)_minmax(auto,_1024px)_minmax(16px,_1fr)] sm:grid-cols-[minmax(64px,_1fr)_minmax(auto,_1024px)_minmax(64px,_1fr)]'
     >
-      <a href='/' class='[grid-column:_2] pt-10'>
+      <a href='/' class='[grid-column:_2] py-10'>
         <Image alt='' src={logo} width={32} height={32} />
       </a>
       <slot />
