Fix minor style issues

--- a/src/pages/meal-app.astro
+++ b/src/pages/meal-app.astro
@@ -46,7 +46,7 @@ import Heading from '../components/Heading.astro'
   <Section>
     <div class='xs:flex xs:flex-wrap'>
       <div class='xs:grow mb-20'>
-        <h3 class='mb-8 text-lg font-semibold'>Created with</h3>
+        <h2 class='mb-6 text-xl font-semibold'>Created with</h2>
         <ul>
           <ListItem>React</ListItem>
           <ListItem>GraphQL</ListItem>
@@ -73,7 +73,7 @@ import Heading from '../components/Heading.astro'
       </div>
     </div>
 
-    <div class='text-sm mb-12 ml-12 sm:ml-24 md:ml-48 lg:ml-96 leading-6'>
+    <div class='mt-20 mb-12 ml-12 sm:ml-24 md:ml-48 lg:ml-96 text-sm leading-6'>
       <span class='text-lg text-amber-500'>*</span> I originally built the backend
       in Node and Apollo Server, and later built a second version of the server in
       Go as a way to get started learning the language. I used the gqlgen library
@@ -84,7 +84,6 @@ import Heading from '../components/Heading.astro'
 
   <Section>
     <Heading>Cool features</Heading>
-    <!-- <div class='grid grid-cols-[1fr_2fr] gap-24'> -->
     <div class='flex flex-wrap mb-20'>
       <div class='lg:basis-3/5'>
         <Picture
