--- a/src/pages/vr-tactics.astro
+++ b/src/pages/vr-tactics.astro
@@ -206,12 +206,18 @@ import Heading from '../components/Heading.astro'
     </div>
 
     <div class='lg:flex lg:flex-row-reverse'>
-      <p class='mb-10 lg:basis-2/3 lg:pl-16'>
-        The one modification I found useful to make was to differentiate the
-        player and AI units. Instead of trying to find a whole different model,
-        I just opened a couple of the texture files in Photoshop and did a quick
-        and dirty color replacement.
-      </p>
+      <div class='mb-10 lg:basis-2/3 lg:pl-16'>
+        <p class='mb-10'>
+          The one modification I found useful to make was to differentiate the
+          player and AI units. Instead of trying to find a whole different
+          model, I just opened a couple of the texture files in Photoshop and
+          did a quick and dirty color replacement.
+        </p>
+        <p>
+          All the other models in the scene (except the VR controllers) were
+          made by me, using Blender.
+        </p>
+      </div>
 
       <div class='mb-10 lg:basis-1/3'>
         <Picture
