--- a/src/pages/nemesis-ai.astro
+++ b/src/pages/nemesis-ai.astro
@@ -38,6 +38,7 @@ import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
       alt='screenshot'
       widths={[1024]}
       aspectRatio='1126:852'
+      class='mb-8'
     />
   </Section>
 
@@ -48,7 +49,7 @@ import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
 
   <Section>
     <div class='xs:flex xs:flex-wrap'>
-      <div class='xs:grow'>
+      <div class='xs:grow mb-16 xs:mb-0'>
         <h2 class='mb-6 text-xl font-semibold'>Created with</h2>
         <ul>
           <ListItem>Python</ListItem>
@@ -63,12 +64,8 @@ import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
       <div
         class='shrink-0 flex justify-center xs:flex-col xs:justify-normal gap-4 xs:gap-8 xs:items-end'
       >
-        <div>
-          <SiteLink url='#' />
-        </div>
-        <div>
-          <GithubLink url='#' />
-        </div>
+        <SiteLink url='#' />
+        <GithubLink url='#' />
       </div>
     </div>
   </Section>
@@ -199,12 +196,8 @@ import nemDoc2 from '../images/nemesis-ai/nem-doc-2.png'
 
   <Section>
     <div class='flex justify-center gap-4'>
-      <div>
-        <SiteLink url='#' />
-      </div>
-      <div>
-        <GithubLink url='#' />
-      </div>
+      <SiteLink url='#' />
+      <GithubLink url='#' />
     </div>
   </Section>
 </ProjectLayout>
